# cpp_seed

./: CMakeLists.txt
include/: foo.h  stack.h
src/: foo.cpp  main.cpp
test/: footest.cpp  stacktest.cpp
